Fix crash when renaming or adding a category and using it as untagged category

When trying to select an unsaved category (either newly created or renamed)
as the untagged category in the category settings page, instead of
populating the tag dropdown list, kphotoalbum would crash.

The new behavior is to disable the tag dropdown instead.

BUG: 477530